<package format="2">
  <name>scan_recorder</name>
  <version>0.0.0</version>
  <description>The scan_recorder package</description>

  <maintainer email="user@example.com">User</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
